test/error/unmatched_elsif.sv
// pattern: `elsif directive outside of an `if/`endif block
`elsif
